# civicc-compiler

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Makefile  README.md  test.i
cmake/: afl.cmake  coconut.cmake  coconut.patch
grammars/: civicc.json  civiccfixedids.json
scripts/: dist.sh
src/: main.c  main.ccn  main.ccn.orig  release_assert.h  to_string.c  to_string.h  utils.h
src/assignment/: count_ids.c
src/code_gen/: code_gen.c
src/code_gen_preparation/: dimension_reduction.c  heterogeneous_assignments.c  homogeneous_assignments.c  init_function.c  parameter_passing.c  short_circuit.c  to_ternary.c  unpack_arrayinit.h
src/context_analysis/: declaration_check.c  definitions.c  definitions.h  extract_for_iterator.c  free_symbols.c  function_header.c  heterogeneous_assignments.c  homogeneous_assignments.c  init_function.c  type_checking.c
src/counting/: identifier_counting.c
src/global/: globals.c  globals.h
src/optimization/: algebraic_reordering.c  algebraic_simplification.c  branch_evaluation.c  constant_folding.c  deadcode_elimination.c  opt_sub.c
src/print/: print.c
src/scanparse/: lexer.l  parser.y  preprocessor.c  preprocessor.h
test/: afl_slice.cpp  behavior_tests.cpp  codegenprep_tests.cpp  codegenprep_tests.cpp.orig  context_tests.cpp  fuzz_scanparse_slice.cpp  fuzz_slice.cpp  generation_tests.cpp  optimization_tests.cpp  scanner_tests.cpp  scanparse_tests.cpp  test.cpp  test_interface.c  test_interface.h  test_strength_reduction.cvc  test_super_strength_reduction.cvc  testutils.h
test/data/: temp.txt
test/data/array_index/: main.cvc
test/data/bad_main/: main.cvc
test/data/binops/: main.cvc
test/data/binops_precedence/: main.cvc
test/data/codegen/array_init/: main.cvc
test/data/codegen/binops/: main.cvc
test/data/codegen/casts/: main.cvc
test/data/codegen/do_while_loops/: main.cvc
test/data/codegen/edgecases/: valid.cvc  valid2.cvc
test/data/codegen/for_loops/: main.cvc
test/data/codegen/manual_example/: main.cvc
test/data/codegen/monops/: main.cvc
test/data/codegen/while_loops/: main.cvc
test/data/comments/: main.cvc
test/data/double/fundef/: main.cvc
test/data/double/fundef_valid/: main.cvc
test/data/double/vardec/: main.cvc
test/data/double/vardec_invalid/: main.cvc
test/data/dowhile/: main.cvc
test/data/for/: main.cvc
test/data/funbody/: main.cvc
test/data/functional/assignment_01/: array.cvc  array.h  core.cvc  core.h  coreio.cvc  coreio.h  queens.cvc  test.cvc
test/data/functional/codegen_paths/: exports.cvc  main.cvc
test/data/fundec_float/: main.cvc
test/data/fundec_int/: main.cvc
test/data/fundec_void/: main.cvc
test/data/fundef_bool/: main.cvc
test/data/fundef_float/: main.cvc
test/data/fundef_int/: main.cvc
test/data/globadec_float/: main.cvc
test/data/globaldec_array/: main.cvc
test/data/globaldec_array/valid/: main.cvc
test/data/globaldec_bool/: main.cvc
test/data/globaldec_int/: main.cvc
test/data/globaldef_assign_array/: main.cvc
test/data/globaldef_cast/: main.cvc
test/data/globaldef_float/: main.cvc
test/data/globaldef_int/: main.cvc
test/data/if/: main.cvc
test/data/ints/correct/: main.cvc
test/data/ints/incorrect_bin/: main.cvc
test/data/ints/incorrect_decimal/: main.cvc
test/data/ints/incorrect_hex/: main.cvc
test/data/ints/incorrect_octal/: main.cvc
test/data/local_fundef/: main.cvc
test/data/local_fundefs/: main.cvc
test/data/local_fundefs_recursive/: main.cvc
test/data/milestone_10/: main.cvc
test/data/milestone_11/: main.cvc
test/data/milestone_6/array_fun/: main.cvc
test/data/milestone_6/array_init/: main.cvc
test/data/milestone_6/global_defs/: main.cvc
test/data/milestone_6/init_fun/: main.cvc
test/data/milestone_8/arr_params/: main.cvc
test/data/milestone_8/arr_proccall/: main.cvc
test/data/milestone_8/double_arr_params/: main.cvc
test/data/milestone_8/double_arr_proccall/: main.cvc
test/data/milestone_8/two_arr_params/: main.cvc
test/data/milestone_8/two_arr_proccall/: main.cvc
test/data/milestone_9/: main.cvc
test/data/nested_for/: main.cvc
test/data/optimization/algebraic_reordering/: main.cvc
test/data/optimization/algebraic_simplification/: main.cvc
test/data/optimization/branch_evaluation/: main.cvc
test/data/optimization/constant_folding/: main.cvc
test/data/optimization/dead_code_elimination/: main.cvc
test/data/preperation/edgecase/: invalid.cvc  valid.cvc
test/data/proc_call/: main.cvc
test/data/proc_call/context/: main.cvc
test/data/same_identifier/fundef_vardec/: main.cvc
test/data/same_identifier/param_nested_param/: main.cvc
test/data/testsuite_public/arrays/check_success/: export_array_arg.cvc  export_scopes.cvc
test/data/testsuite_public/basic/functional/: for_to_while.cvc
test/data/testsuite_public/nested_funs/check_success/: local_funs.cvc
test/data/typecheck/edge_case_array/: main.cvc
test/data/typecheck/edge_case_proccall/: main.cvc
test/data/typecheck/invalid/: main.cvc
test/data/typecheck/valid/: main.cvc
test/fundec_bool/: main.cvc
test/fundef_void/: main.cvc
test/globaldec_bool/: main.cvc
test/globaldec_int/: main.cvc
test/globaldef_bool/: main.cvc
test/globaldef_int/: main.cvc
